# qllr-framework

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quantum_programs.py
src/qllr/: __init__.py
src/qllr/analysis/: __init__.py  complexity.py  width.py
src/qllr/compilation/: __init__.py  circuit.py  circuit_extraction.py
src/qllr/core/: __init__.py  syntax.py  types.py
src/qllr/typing/: __init__.py  orthogonality.py  typechecker.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_100_coverage.py  test_analysis.py  test_analysis_complete.py  test_circuit_complete.py  test_compilation.py  test_core.py  test_final_coverage.py  test_orthogonality_complete.py  test_syntax_complete.py  test_typechecker_complete.py  test_types_complete.py  test_typing.py
